--- a/index.html
+++ b/index.html
@@ -1086,8 +1086,7 @@
 															data-frame_1="e:power2.inOut;st:2600;sp:1000;"
 															data-frame_999="o:0;e:nothing;st:w;sp:810;"
 															style="z-index:13;font-family:'Roboto';"><span
-																style="color:#e13d3a">Let’s bring your valuable ideas to
-																life together!</span> </rs-layer><!--  							-->
+																style="color:#e13d3a">Increase the blockchain adoption in the Arab region</span> </rs-layer><!--  							-->
 														<rs-layer id="slider-3-slide-3-layer-13" data-type="text"
 															data-color="rgba(255,255,255,1)" data-rsp_ch="on"
 															data-xy="x:r;xo:30px,20px,110px,110px;y:m,m,b,b;yo:95px,100px,131px,131px;"
@@ -2340,11 +2339,11 @@
 												class="wpb_single_image wpb_content_element vc_align_left  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1639286136542">
 												<figure class="wpb_wrapper vc_figure">
 													<div class="vc_single_image-wrapper vc_box_shadow_3d  vc_box_border_grey">
-														<img width="2000" height="1600" src="./images/Untitled-design-4.png"
+														<img width="2000" height="1600" src="./images/market-entry.jpg"
 															class="vc_single_image-img attachment-full" alt="" loading="lazy"
-															srcset="./images/Untitled-design-4.png 2000w, ./images/Untitled-design-4-300x240.png 300w, ./images/Untitled-design-4-1024x819.png 1024w, ./images/Untitled-design-4-768x614.png 768w, ./images/Untitled-design-4-1536x1229.png 1536w, ./images/Untitled-design-4-600x480.png 600w"
+															srcset="./images/market-entry.jpg 2000w, ./images/market-entry.jpg 300w, ./images/market-entry.jpg 1024w, ./images/market-entry.jpg 768w, ./images/market-entry.jpg 1536w, ./images/market-entry.jpg 600w"
 															sizes="(max-width: 2000px) 100vw, 2000px"
-															data-dt-location="http://127.0.0.1/untitled-design-4-2/" />
+															 />
 													</div>
 												</figure>
 											</div>
@@ -2374,11 +2373,10 @@
 												class="wpb_single_image wpb_content_element vc_align_left  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1639286249491">
 												<figure class="wpb_wrapper vc_figure">
 													<div class="vc_single_image-wrapper vc_box_shadow_3d  vc_box_border_grey">
-														<img width="2000" height="1600" src="./images/Untitled-design.jpg"
+														<img width="2000" height="1600" src="./images/match-make.jpg"
 															class="vc_single_image-img attachment-full" alt="" loading="lazy"
-															srcset="./images/Untitled-design.jpg 2000w, ./images/Untitled-design-300x240.jpg 300w, ./images/Untitled-design-1024x819.jpg 1024w, ./images/Untitled-design-768x614.jpg 768w, ./images/Untitled-design-1536x1229.jpg 1536w, ./images/Untitled-design-600x480.jpg 600w"
-															sizes="(max-width: 2000px) 100vw, 2000px"
-															data-dt-location="http://127.0.0.1/untitled-design-4/" />
+															srcset="./images/match-make.jpg 2000w, ./images/match-make.jpg 300w, ./images/match-make.jpg 1024w, ./images/match-make.jpg 768w, ./images/match-make.jpg 1536w, ./images/match-make.jpg 600w"
+															sizes="(max-width: 2000px) 100vw, 2000px" />
 													</div>
 												</figure>
 											</div>
@@ -2408,11 +2406,10 @@
 												class="wpb_single_image wpb_content_element vc_align_left  wpb_animate_when_almost_visible wpb_left-to-right left-to-right vc_custom_1639286340967">
 												<figure class="wpb_wrapper vc_figure">
 													<div class="vc_single_image-wrapper vc_box_shadow_3d  vc_box_border_grey">
-														<img width="2000" height="1600" src="./images/Untitled-design-5.png"
+														<img width="2000" height="1600" src="./images/community.jpg"
 															class="vc_single_image-img attachment-full" alt="" loading="lazy"
-															srcset="./images/Untitled-design-5.png 2000w, ./images/Untitled-design-5-300x240.png 300w, ./images/Untitled-design-5-1024x819.png 1024w, ./images/Untitled-design-5-768x614.png 768w, ./images/Untitled-design-5-1536x1229.png 1536w, ./images/Untitled-design-5-600x480.png 600w"
-															sizes="(max-width: 2000px) 100vw, 2000px"
-															data-dt-location="http://127.0.0.1/untitled-design-5/" />
+															srcset="./images/community.jpg 2000w, ./images/community.jpg 300w, ./images/community.jpg 1024w, ./images/Ucommunity.jpg 768w, ./images/community.jpg 1536w, ./images/community.jpg 600w"
+															sizes="(max-width: 2000px) 100vw, 2000px" />
 													</div>
 												</figure>
 											</div>
@@ -2424,7 +2421,7 @@
 													data-ultimate-target='.uvc-heading.ultimate-heading-584761b629437cf61 h2'
 													data-responsive-json-new='{"font-size":"desktop:20px;","line-height":"desktop:30px;"}'>
 													<h2 style="font-weight:bold;margin-bottom:15px;">Community Building
-														Arabic content</h2>
+														</h2>
 												</div>
 												<div class="uvc-sub-heading ult-responsive"
 													data-ultimate-target='.uvc-heading.ultimate-heading-584761b629437cf61 .uvc-sub-heading '
@@ -2720,8 +2717,8 @@
 						
 						</div><!-- Row Backgrounds -->
 						<div class="upb_bg_img"
-							data-ultimate-bg="url(https://gateway.pinata.cloud/ipfs/QmVwyHTLkr5Yhx8FTmecZodnAxMmiuxpz3oZx6aBxn6yGB)"
-							data-image-id="id^6382|url^https://gateway.pinata.cloud/ipfs/QmVwyHTLkr5Yhx8FTmecZodnAxMmiuxpz3oZx6aBxn6yGB|caption^null|alt^null|title^14_Donate_Computer-OverlayVideo.jpg|description^null"
+							data-ultimate-bg="url(https://gateway.pinata.cloud/ipfs/Qmei63KtsMNU1EYt5gbBMR52pWCvgvVZCVj6ZvPWVdSpvi)"
+							data-image-id="id^6382|url^https://gateway.pinata.cloud/ipfs/Qmei63KtsMNU1EYt5gbBMR52pWCvgvVZCVj6ZvPWVdSpvi|caption^null|alt^null|title^14_Donate_Computer-OverlayVideo.jpg|description^null"
 							data-ultimate-bg-style="vcpb-vz-jquery" data-bg-img-repeat="repeat" data-bg-img-size="cover"
 							data-bg-img-position="" data-parallx_sense="30" data-bg-override="ex-full"
 							data-bg_img_attach="scroll" data-upb-overlay-color="" data-upb-bg-animation=""
